--- a/airline/pom.xml
+++ b/airline/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>csc450.airline</groupId>
     <artifactId>airline</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.2</version>
     <properties>
         <maven.compiler.source>12</maven.compiler.source>
         <maven.compiler.target>12</maven.compiler.target>
